[09] 랜딩페이지 및 로그인 페이지 추가

--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -1,22 +1,17 @@
-html {
-  height: 100%;
+@import "tailwindcss";
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/PyeojinGothic-Regular.woff2') format('woff2');
+  font-weight: 400;
 }
 
-body {
-  margin: 0;
-  height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets/fonts/PyeojinGothic-Bold.woff2') format('woff2');
+  font-weight: 700;
 }
 
-#root {
-  height: 100vh;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+@theme {
+  --font-family-sans: 'PyeojinGothic', system-ui, sans-serif;
 }
