--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -1,17 +1,22 @@
-@import "tailwindcss";
-
-@font-face {
-  font-family: 'Pretendard';
-  src: url('./assets/fonts/PyeojinGothic-Regular.woff2') format('woff2');
-  font-weight: 400;
+html {
+  height: 100%;
 }
 
-@font-face {
-  font-family: 'Pretendard';
-  src: url('./assets/fonts/PyeojinGothic-Bold.woff2') format('woff2');
-  font-weight: 700;
+body {
+  margin: 0;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@theme {
-  --font-family-sans: 'PyeojinGothic', system-ui, sans-serif;
+#root {
+  height: 100vh;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
